[package]
name = "tesseract-beefy"
version = "0.1.0"
edition = "2021"
description = "BEEFY client implementation for the tesseract relayer"
authors = ["Polytope Labs <hello@polytope.technology>"]

[dependencies]
# crates.io
serde = { version = "1.0.164", features = ["derive"] }
anyhow = "1.0.75"
subxt = { version = "0.30.1", features = ["substrate-compat"] }
codec = { package = "parity-scale-codec", version = "3.2.2", features = ["derive"] }
futures = "0.3.28"
async-trait = "0.1.53"
tokio = { version = "1.32.0", features = ["full", "sync"] }
finality-grandpa = "0.16.2"
log = "0.4.20"
hex-literal = "0.4.1"
sp-core = { version = "21.0.0", features = ["full_crypto"] }
ethers = { workspace = true, features = ["ws", "optimism"] }
ethabi = { version = "18.0.0", features = ["rlp", "full-serde"], default-features = false }
derive_more = { version = "1.0.0-beta.6", features = ["display"] }
sp-runtime = { workspace = true }
tracing = { workspace = true }
redis = { version = "0.25.3", features = ["connection-manager", "tokio-comp", "bytes"]}
bytes = "1.6.0"

# polytope-labs
pallet-ismp = { workspace = true }
pallet-ismp-rpc = { workspace = true }
ismp = { workspace = true }

ismp-solidity-abi = { workspace = true }
substrate-state-machine = { workspace = true }
beefy-verifier-primitives = { workspace = true }
beefy-prover = { workspace = true }
subxt-utils = { workspace = true }

# substrate
sp-consensus-beefy = { workspace = true }
polkadot-core-primitives = { workspace = true }

# tesseract
tesseract-substrate = { workspace = true  }
tesseract-primitives = { workspace = true  }
zk-beefy = { path = "zk" }
rsmq_async = "9.0.0"
redis-async = "0.17.1"
