[package]
name = "tesseract-bsc"
version = "0.1.0"
edition = "2021"
description = "Bsc consensus host for tesseract"
authors = ["Polytope Labs <hello@polytope.technology>"]

[dependencies]
bsc-prover = { workspace = true }
bsc-verifier = { workspace = true }
ismp-bsc = { workspace = true }
geth-primitives = { workspace = true }
ismp = { workspace = true }

serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.105"
hex = "0.4.3"
log = "0.4.19"
anyhow = "1.0.75"
codec = { package = "parity-scale-codec", version = "3.2.2", features = ["derive"] }
futures = "0.3.28"
async-trait = "0.1.71"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
hex-literal = "0.4.1"
base2 = "0.3.1"
primitive-types = { version = "0.12.1", features = ["impl-codec"] }
ethers = { workspace = true, features = ["rustls"] }
sp-core = "22.0.0"


tesseract-primitives = { workspace = true  }
tesseract-evm = { workspace = true  }
jsonrpsee = { version = "0.21", features = ["ws-client"]}

[dev-dependencies]
tesseract-evm = { workspace = true, features = ["testing"] }
sp-core = "22.0.0"
codec = { package = "parity-scale-codec", version = "3.2.2", features = ["derive"] }
dotenv = "0.15.0"
anyhow = "1.0.75"

