[package]
name = "tesseract-consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
log = "0.4.17"
futures = "0.3.28"
tesseract-primitives = { path = "../primitives" }
tokio = { version = "1.27.0", features = ["full"] }
ismp = { git = "ssh://git@github.com/polytope-labs/ismp-rs.git", branch = "main" }
