[package]
name = "transaction-fees"
version = "0.1.0"
edition = "2021"
description = "Local tracking of relayer payments on all chains"
authors = ["Polytope Labs <hello@polytope.technology>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.53"
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
primitive-types = "0.12.2"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust.git", tag = "0.6.11", features = ["sqlite", "migrations"] }
serde = { version = "1.0.195", features = ["derive"] }
itertools = "0.12.1"

sp-core = { workspace = true }
hex = "0.4.3"
subxt = { version = "0.30.1", features = ["substrate-compat"] }
chrono = "0.4.31"
codec = { package = "parity-scale-codec", version = "3.2.2", features = ["derive"] }

tesseract-evm = { path = "../evm/common" }
tesseract-substrate = { path = "../substrate/common" }
tesseract-primitives = { path = "../primitives" }

pallet-ismp.workspace = true
ismp.workspace = true
pallet-ismp-relayer.workspace = true

[dev-dependencies]
tesseract-primitives = { path = "../primitives", features = ["testing"] }