[package]
name = "light-client-verifier"
version = "0.1.0"
edition = "2021"
authors = ["Polytope Labs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-consensus = { git = "https://github.com/polytope-labs/ethereum-consensus", branch="dami/no-std-support" }
base2 = {version="0.2.2", default-features=false}
light-client-primitives = {path="../light-client-primitives"}
ssz-rs = { git = "https://github.com/polytope-labs/ssz-rs", branch="seun/ssz-merkle-multi-proof-phase-1", features=["serde"] }
milagro_bls = { git = "https://github.com/sigp/milagro_bls", default-features = false }
