[package]
name = "tesseract-messaging"
version = "0.1.0"
edition = "2021"
description = "Chain agnostic ISMP request/response relay"
authors = ["Polytope Labs <hello@polytope.technology>"]

[dependencies]
anyhow = "1.0.75"
log = "0.4.17"
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
sp-core = { version = "21.0.0", features = ["full_crypto"] }

ismp.workspace = true
pallet-ismp.workspace = true

transaction-payment = { path = "../payments" }
tesseract-primitives = { path = "../primitives" }
ismp-solidity-abi.workspace = true
