[package]
name = "op-host"
version = "0.1.0"
edition = "2021"

[build-dependencies]
anyhow = "1.0.75"
ethers-contract-abigen = { workspace = true }


[dependencies]
tesseract-evm = { workspace = true }
ethers = { workspace = true, features = ["rustls"] }
geth-primitives = { workspace = true }
ethabi = { version = "18.0.0", features = ["rlp", "full-serde"], default-features = false }
op-verifier = { workspace = true }
anyhow = "1.0.75"
serde = { version = "1.0.164", features = ["derive"] }
tesseract-primitives = { workspace = true }
ismp = { workspace = true }
log = "0.4.19"
sp-core = { workspace = true,  features = ["full_crypto"] }
async-trait = "0.1.53"



[dev-dependencies]
alloy-rlp = "0.3.2"
alloy-rlp-derive = "0.3.2"
alloy-primitives = { version = "0.3.1", features = ["rlp"] }
hex = "0.4.3"
dotenv = "0.15.0"
tesseract-evm = { workspace = true, features = ["testing"] }
tokio = { version = "1.32.0", features = ["macros", "sync"] }
hex-literal = { version ="0.4.1"}
